# multimodal-rag-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLEANUP_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FILE_STRUCTURE.md  LICENSE  Makefile  PERSONAL_RAG_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TERMINAL_TROUBLESHOOTING.md  TEST_STATUS.md  TROUBLESHOOTING.md  UV_SETUP.md  WORKFLOW.md  docker-compose.yml  packages.txt  pyproject.toml  pytest.ini  quick_fix.sh  rebuild_index.sh  requirements.txt  requirements_eval.txt  requirements_full.txt  requirements_simple.txt  restart.sh  results_manifest.json  run.py  run_simple.sh  setup.py  start_api.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
configs/: config.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep  knowledge_base.json
docker/: Dockerfile.frontend
docs/: .gitkeep  DEPLOYMENT.md  INTERVIEW_PREP.md  OPTIMIZATION_SUMMARY.md  PERSONAL_RAG_README.md  PROJECT_POSITIONING.md  REPRODUCE.md  TECHNICAL_GUIDE.md  TERMINAL_TROUBLESHOOTING.md  TROUBLESHOOTING.md  WORKFLOW.md  metrics.md  observability.md
eval/: __init__.py  ablation_rerank.py  adapters.py  backbone_sweep.py  evaluate.py  faithfulness_check.py  metrics.py  qualitative_demo.py
eval/datasets/: __init__.py  prepare_flickr30k.py
frontend/: Dockerfile  app.py  personal_app.py  requirements.txt  standalone_app.py
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  namespace.yaml  redis-deployment.yaml  secrets.yaml
notebooks/: 01_data_processing_and_embeddings.ipynb  02_vector_database_setup.ipynb  03_rag_pipeline.ipynb  04_evaluation.ipynb
scripts/: .gitkeep  __init__.py  ingest.py  k8s_demo.sh  make_manifest.py  quick_fix.sh  restart.sh  run_api.sh  run_frontend.sh  run_simple.sh
src/: __init__.py
tests/: __init__.py  test_api.py  test_eval_metrics.py  test_fusion.py  test_image_search_service.py  test_retriever.py  test_search_api.py  test_vector_store.py
(+50 files in other folders)
